# Vortex

./: .dockerignore  .gitignore  Dockerfile.backend  README.md  docker-compose.yml
vortex-api/: docker-compose.yml  go.mod  go.sum
vortex-api/cmd/server/: main.go
vortex-api/internal/api/: handlers.go  response.go
vortex-api/internal/runner/: process_runner.go
vortex-api/internal/store/: blob_store.go
vortex-api/internal/ws/: handler.go
vortex-cli/: go.mod  main.go
vortex-cli/cmd/: deploy.go  init.go  root.go  run.go
vortex-runtime/: Cargo.toml  build.rs
vortex-runtime/src/: bootstrap.js  bootstrap.rs  lib.rs  main.rs  ops.rs  worker.rs
vortex-web/: Dockerfile  next.config.ts  package-lock.json  package.json
vortex-web/src/app/: layout.tsx  page.tsx
vortex-web/src/components/: Console.tsx  Editor.tsx  Navbar.tsx
vortex-web/src/hooks/: useLogStream.ts  useRunFunction.ts
vortex-web/src/store/: useVortexStore.ts
