[package]
name = "vortex-runtime"
version = "0.1.0"
edition = "2021"
description = "A secure V8 JavaScript runtime for the Vortex FaaS platform"
license = "MIT"

[dependencies]
deno_core = "0.311"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
